--- a/index.html
+++ b/index.html
@@ -5,14 +5,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Instagram</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
 
+  <header id="header">
+    <div class="container p-0">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="logo-wrapper">
+          <a href="#"><img src="media/main-logo.png" alt="main-logo" width="103" height="29"></a>
+        </div>
+        <div class="input-wrapper">
+          <input class="header-input" type="text" name="search" placeholder="Search">
+          <i class='bx bx-search' ></i>
+        </div>
+        <div class="me-4">
+          <button class="me-3"><i class='bx header-icons bx-home-alt'></i></button>
+          <button class="me-3"><i class='bx header-icons bx-message-rounded-edit'></i></button>
+          <button class="me-3"><i class='bx header-icons bx-plus-circle'></i></button>
+          <button class="me-3"><i class='bx header-icons bx-compass'></i></button>
+          <button class="me-3"><i class='bx header-icons bx-heart'></i></button>
+          <button class=""><i class='bx header-icons header-icons-last bxs-user-circle'></i></button>
+        </div>
+      </div>
+    </div>
+
+  </header>
+
+  <section>
+    <div class="container pb-5">
+      <ul class="card-list d-flex flex-wrap m-0 p-0" id="cardList">
+        
+      </ul>
+    </div>
+  </section>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
   <script src="js/main.js"></script>
 </body>
 
