--- a/index.html
+++ b/index.html
@@ -11,40 +11,146 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="shortcut icon" href="https://agencyanalytics.com/assets/integration/icon/instagram.svg"
+  type="image/x-icon">
 </head>
 
 <body>
-
   <header id="header">
     <div class="container p-0">
       <div class="d-flex justify-content-between align-items-center">
-        <div class="logo-wrapper">
+        <div class="header__logo__box">
           <a href="#"><img src="media/main-logo.png" alt="main-logo" width="103" height="29"></a>
         </div>
-        <div class="input-wrapper">
-          <input class="header-input" type="text" name="search" placeholder="Search">
-          <i class='bx bx-search' ></i>
+        <div class="header__inp__wrapper">
+          <input class="header__input" type="text" name="search" placeholder="Search">
+          <i class='bx bx-search'></i>
         </div>
         <div class="me-4">
-          <button class="me-3"><i class='bx header-icons bx-home-alt'></i></button>
-          <button class="me-3"><i class='bx header-icons bx-message-rounded-edit'></i></button>
-          <button class="me-3"><i class='bx header-icons bx-plus-circle'></i></button>
-          <button class="me-3"><i class='bx header-icons bx-compass'></i></button>
-          <button class="me-3"><i class='bx header-icons bx-heart'></i></button>
-          <button class=""><i class='bx header-icons header-icons-last bxs-user-circle'></i></button>
+          <button class="me-3"><i class='bx header__icons bx-home-alt'></i></button>
+          <button class="me-3"><i class='bx header__icons bx-message-rounded-edit'></i></button>
+          <button class="me-3"><i class='bx header__icons bx-plus-circle'></i></button>
+          <button class="me-3"><i class='bx header__icons bx-compass'></i></button>
+          <button class="me-3"><i class='bx header__icons bx-heart'></i></button>
+          <button class=""><i class='bx header__icons header__icons--last bxs-user-circle'></i></button>
         </div>
       </div>
     </div>
-
   </header>
 
-  <section>
+  <section id="hero">
+    <div class="container">
+      <div class="d-flex justify-content-center hero__inner">
+        <div class="hero__wrapper">
+          <a class="hero__link" href="#">
+            <img class="hero__img" src="media/najot-talim-icon.jpg" alt="najot" width="168" height="168">
+          </a>
+        </div>
+        <div>
+          <div class="d-flex ">
+            <p class="m-0 p-0 me-4 hero__title">najottalim</p>
+            <a class="hero__link--active me-2" href="#">Message</a>
+            <a class="hero__follow me-2" href="#">Follow</a>
+            <a class="hero__follow hero__follow--down me-3" href="#"><i class='bx bx-chevron-down'></i></a>
+            <a href="#"><i class='bx text-dark bx-dots-horizontal-rounded'></i></a>
+          </div>
+          <div class="d-flex mt-3">
+            <p class="me-4"><span class="hero__bold__text me-2">1.043</span>posts</p>
+            <p class="me-4"><span class="hero__bold__text me-2">100k</span>followers</p>
+            <p><span class="me-2 hero__bold__text">4</span>following</p>
+          </div>
+          <p class="hero__bold__text mb-1 ">Najot talim</p>
+          <p class="hero__sub__title mb-1">Education</p>
+
+          <div class="d-flex align-items-center">
+            <i class='bx  bxs-hand-right'></i>
+            <p class="m-0">Zamonaviy kasblar markazi</p>
+          </div>
+          <a href="#">www.youtube.com/c/najottalim</a>
+        </div>
+      </div>
+
+   
+      <div class="hero__list__hold">
+        <ul class="m-0 p-0 d-flex slider-ul justify-content-between">
+  
+          <li class="hero__slide__item ">
+            <a href="#"><img class="hero__slide__img" src="media/slider-1.jpg" alt="slider-1" width="77" height="77"></a><br>
+             <p class="hero__bold__text mt-0 ">Master klass</p> 
+          </li>
+  
+          <li class="hero__slide__item">
+            <a href="#"><img class="hero__slide__img" src="media/slider-2.jpg" alt="slider-2" width="77" height="77"></a><br>
+           <p class="hero__bold__text m-0">Darslar</p> 
+          </li>
+  
+          <li class="hero__slide__item">
+            <a href="#"><img class="hero__slide__img" src="media/slider-3.jpg" alt="slider-3" width="77" height="77"></a><br>
+           <p class="hero__bold__text m-0">Ramazon</p> 
+          </li>
+  
+          <li class="hero__slide__item">
+            <a href="#"><img class="hero__slide__img" src="media/slider-4.jpg" alt="slider-4" width="77" height="77"></a><br>
+           <p class="hero__bold__text m-0">2021</p> 
+          </li>
+  
+          <li class="hero__slide__item">
+            <a href="#"><img class="hero__slide__img" src="media/slider-5.jpg" alt="slider-5" width="77" height="77"></a><br>
+           <p class="hero__bold__text m-0">Savol / Javob</p> 
+          </li>
+  
+          <li class="hero__slide__item">
+            <a href="#"><img class="hero__slide__img" src="media/slider-6.jpg" alt="slider-6" width="77" height="77"></a><br>
+           <p class="hero__bold__text m-0">Yangiliklar</p> 
+          </li>
+  
+         <div class="d-flex  align-items-center">
+           <div class="hero__btn__box">
+             <button id="leftSlide"><i class='bx hero__arrow__icon bxs-chevron-left-circle'></i></button>
+           </div>
+            
+           <div class="hero__btn__box--right">
+            <button id="rightSlide"><i class='bx hero__arrow__icon bxs-chevron-left-circle bx-flip-horizontal' ></i></button>
+          </div>
+         </div>
+        </ul>
+
+      </div>
+    </div>
+
+  </section>
+
+
+  <section id="content">
     <div class="container pb-5">
-      <ul class="card-list d-flex flex-wrap m-0 p-0" id="cardList">
-        
+      <span class="content__line"></span>
+      <ul class="m-0 p-3 d-flex justify-content-center align-items-center">
+        <li class="content__item">
+          <button class="content__link Post"><i class='bx content__icon bx-grid me-1'></i>Posts</button>
+        </li>
+        <li class="content__item">
+          <button class="content__link"><i class='bx content__icon bx-book-content me-1'></i>Guides</button>
+        </li>
+        <li class="content__item">
+          <button class="content__link"><i class='bx content__icon bx-play-circle me-1'></i>Videos</button>
+        </li>
+        <li>
+          <button class="content__link saved"><i class='bx content__icon bxs-bookmarks me-1'></i>Saved</button>
+        </li>
+      </ul>
+
+      <ul class="card-list m-0 p-0" id="savedList">
+
+      </ul>
+
+      <ul class="card-list  m-0 p-0" id="cardList">
       </ul>
     </div>
   </section>
+
+
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
